--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
               <img
                 src="./assets/education.png"
                 alt="Education icon"
-                class="icon"
-              />
+                class="icon">
               <h3>Education</h3>
               <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
             </div>
